# autocsv-profiler-suite

./: .bandit  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  mypy_dataprep.ini  mypy_main.ini  mypy_profiling.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run_analysis.bat
.Release/: DISCLAIMER  NOTICE  requirements.txt
.Release/autocsv_profiler/: __init__.py  base.py
.Release/autocsv_profiler/config/: viz_config.py
.Release/autocsv_profiler/core/: logger.py  utils.py
.Release/autocsv_profiler/engines/: __init__.py
.Release/autocsv_profiler/engines/dataprep/: __init__.py
.Release/autocsv_profiler/engines/main/: __init__.py
.Release/autocsv_profiler/engines/profiling/: sweetviz_report.py
.Release/autocsv_profiler/ui/: __init__.py  components.py
.Release/config/: master_config.yml
.Release/docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  DEVELOPMENT.md  INSTALLATION.md  PERFORMANCE.md  USER_GUIDE.md  index.md
.Release/docs/api/: autocsv_profiler.md  base.md
.Release/docs/api/engines/: README.md
.Release/docs/api/ui/: README.md
.Release/docs/tutorials/: getting_started.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
autocsv_profiler/: plots.py  stats.py  summarize.py  types.py  version.py
autocsv_profiler/config/: __init__.py  settings.py
autocsv_profiler/core/: __init__.py  dataset_info.py  exceptions.py  validation.py  warnings.py
autocsv_profiler/engines/dataprep/: dataprep_report.py
autocsv_profiler/engines/main/: analyzer.py
autocsv_profiler/engines/profiling/: __init__.py  ydata_report.py
autocsv_profiler/ui/: interactive.py  interface.py
batch/: run_analysis.bat
config/: __init__.py
doc/: environments.md
docs/: AutoCSV-Profiler-Suite_docs.md  AutoCSV-Profiler-packages_docs.md  PyPI Package Docs.md  README.md  Source-Suite-Guide.md  TROUBLESHOOTING.md  installation.md  readme.md  troubleshooting.md  usage.md
docs/api/: README.md  config.md
docs/api/engines/: ENGINE_TESTING.md
env/Base Environment/: requirements.txt
env/DataPrep Environment/: requirements.txt
env/Profiling Environment/: requirements.txt
environments/: environment-dataprep.yml  environment-main.yml  environment-profiling.yml
example/output/bank-additional/: bank-additional_data_overview.txt  categorical_analysis.csv  column_summary.txt  distinct_values_count_by_dtype.html  numerical_analysis.csv  summary_table_groupby_y.csv  sweetviz_report.html
example/output/bank-additional/missing_values/: missing_values_report.txt
example/output/bank-additional/outliers/: iqr_outliers_report.csv
example/output/bank-additional/outliers/individual box plots/: statistical_summary.txt
example/output/bank-additional/relation_analysis/: analysis_results.txt  categorical_analysis.csv  numerical_analysis.csv  vif_analysis.csv
example/output/bank-additional/visualization/plot_summary_cat_bar_optional_target/: all_categorical_summaries.txt  contact_summary.txt  day_of_week_summary.txt  default_summary.txt  education_summary.txt  housing_summary.txt  job_summary.txt  loan_summary.txt  marital_summary.txt  month_summary.txt  poutcome_summary.txt
example/output/bank-additional/visualization/plot_summary_num_hist_box_optional_target/: age_analysis.txt  campaign_analysis.txt  cons.conf.idx_analysis.txt  cons.price.idx_analysis.txt  duration_analysis.txt  emp.var.rate_analysis.txt  euribor3m_analysis.txt  nr.employed_analysis.txt  numerical_analysis_summary.txt  pdays_analysis.txt  previous_analysis.txt
examples/: employees.csv
package/autocsv-profiler/: README.md
package/autocsv-profiler/docs/: API Reference.md  installation.md  troubleshooting.md  usage.md
scripts/: setup_environments.ps1
src/: auto_csv_profiler.py  cerberus_validator_specific_columns.py  profile_dataprep_report.py  profile_sweetviz_report.py  profile_ydata_profiling_report.py  recognize_delimiter.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  sample_data.py
tests/functional/: __init__.py  test_analyzer_engine.py  test_cli_interface.py  test_configuration.py  test_statistics.py
tests/integration/: __init__.py  test_end_to_end_analysis.py  test_orchestrator_integration.py
tests/performance/: __init__.py  test_memory_performance.py  test_resource_management.py
tests/unit/: __init__.py  test_base_profiler.py  test_config_settings.py  test_core_exceptions.py  test_core_logger.py  test_core_utils.py  test_data_validation.py  test_delimiter_detection.py  test_plots.py  test_stats.py  test_ui_components.py
tests/utils/: __init__.py  test_helpers.py
